Archive2/e0/7ad13f7976c461/main.cpp
struct cudaTextureObject_t {};

class CudaTexture
{
    operator cudeTextureObject_t () const { return t; }
    
private:
    cudaTextureObject_t t;
};